--- a/index.html
+++ b/index.html
@@ -42,33 +42,37 @@
 
     <!-- ================= HERO ================= -->
     <section id="hero">
-      <div class="container hero-content">
+  <div class="container hero-content">
 
-        <div class="hero-text">
-          <h1>Hi, I'm Achmad Aldino</h1>
-          <h2>Frontend & Digital Media Developer</h2>
-          <p>
-            I build clean, modern, and interactive digital experiences
-            using frontend technologies and creative tools.
-            Focused on creating user-friendly interfaces and engaging content.
-          </p>
+    <div class="hero-text">
+      <h1>Hi, I'm Achmad Aldino</h1>
+      <h2>Frontend & Digital Media Developer</h2>
+      <p>
+        I build clean, modern, and interactive digital experiences
+        using frontend technologies and creative tools.
+        Focused on creating user-friendly interfaces and engaging content.
+      </p>
 
-          <div class="hero-actions">
-            <a href="#projects" class="btn primary">
-              <i class="fas fa-code"></i> View Projects
-            </a>
-            <a href="#contact" class="btn secondary">
-              <i class="fas fa-envelope"></i> Contact Me
-            </a>
-          </div>
-        </div>
-
-        <div class="hero-image">
-          <img src="assets/img/profile.jpg" alt="Profile Photo">
-        </div>
-
+      <div class="hero-actions">
+        <a href="#projects" class="btn primary">
+          <i class="fas fa-code"></i> View Projects
+        </a>
+        <a href="#contact" class="btn secondary">
+          <i class="fas fa-envelope"></i> Contact Me
+        </a>
+        <!-- Tombol Download CV baru -->
+        <a href="pdf/Achmad Aldino.pdf" download="AchmadAldino_CV.pdf" class="btn cv-btn">
+          <i class="fas fa-download"></i> Download CV
+        </a>
       </div>
-    </section>
+    </div>
+
+    <div class="hero-image">
+      <img src="assets/img/profile.jpg" alt="Profile Photo">
+    </div>
+
+  </div>
+</section>
 
     <!-- ================= ABOUT ================= -->
     <section id="about">
