--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <i class="fas fa-envelope"></i> Contact Me
         </a>
         <!-- Tombol Download CV baru -->
-        <a href="pdf/Achmad Aldino_2.pdf.pdf" download="AchmadAldino_CV.pdf" class="btn cv-btn">
+        <a href="pdf/Achmad Aldino_2.pdf" download="AchmadAldino_CV.pdf" class="btn cv-btn">
           <i class="fas fa-download"></i> Download CV
         </a>
       </div>
