--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                 </a>
               </li>
               <li>
-                <a href="https://github.com/aldino012" target="_blank">
-                  <i class="fab fa-github"></i>
-                  github.com/aldino012
+                <a href="https://www.instagram.com/job.desk12/" target="_blank">
+                  <i class="fab fa-instagram"></i>
+                  instagram.com/job.desk12
                 </a>
               </li>
             </ul>
